# beamfea

./: .gitignore  AGENTS.md  README.md  STAGE_0_PROMPT.md  foundation_spec.md  plugin-redoc-2.yaml  pyproject.toml  session-ses_1c92.md  session-ses_1cc9.md  session-ses_1ec0.md
beamfea/: __init__.py  api.py  assembly.py  cache.py  conventions.md  element.py  io.py  loads.py  postprocess.py  schema.py  solver.py
beamfea/frontend/: README.md  index.html
tests/: reference_solver.py  test_api.py  test_assembly.py  test_element.py  test_io.py  test_postprocess.py  test_schema_validators.py  test_solver.py
tests/validation/: README.md  V1_expected.json  V1_model.json  V2_expected.json  V2_model.json  V3_expected.json  V3_model.json  V4_expected.json  V4_model.json  V5_expected.json  V5_model.json  V6_expected.json  V6_model.json  V7_expected.json  V7_model.json  V8_expected.json  V8_model.json  V8b_expected.json  V8b_model.json  V9_expected.json  V9_model.json
