[build-system]
requires = ["setuptools>=68", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "beamfea"
version = "0.1.0"
description = "Planar beam-element finite element analysis tool"
readme = "README.md"
requires-python = ">=3.11"
dependencies = [
    "numpy>=1.26,<3.0",
    "scipy>=1.11,<2.0",
    "pydantic>=2.5,<3.0",
    "fastapi>=0.110,<1.0",
    "uvicorn[standard]>=0.27,<1.0",
    "matplotlib>=3.8,<4.0",
]

[project.optional-dependencies]
dev = [
    "pytest>=7.4,<9.0",
    "pytest-cov>=4.1,<6.0",
    "httpx>=0.26,<1.0",
    "ruff>=0.3,<1.0",
]

[project.scripts]
beamfea = "beamfea.api:main"

[tool.setuptools.packages.find]
include = ["beamfea*"]

[tool.pytest.ini_options]
testpaths = ["tests"]
addopts = "-v --strict-markers"

[tool.ruff]
line-length = 100
target-version = "py311"
